--- a/index.html
+++ b/index.html
@@ -4,15 +4,58 @@
 <head>
   <title>Serpentix Arena</title>
   <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+    }
     canvas {
-      background: #111;
-      display: block;
-      margin: 0 auto;
+      display: none;
+      background: radial-gradient(circle, #1a1a1a 0%, #000000 100%);
+      margin: auto;
+      box-shadow: 0 0 20px #0ff;
+    }
+    #menu {
+      margin-top: 10vh;
+    }
+    #ranking {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      background: rgba(0,0,0,0.5);
+      padding: 10px;
+      border-radius: 8px;
+    }
+    #avatarPreview {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      margin: 10px auto;
     }
   </style>
 </head>
 <body>
+  <div id="menu">
+    <h1>🐍 Serpentix Arena</h1>
+    <input type="text" id="playerName" placeholder="Digite seu nome" /><br><br>
+    <label>Escolha sua skin:</label>
+    <select id="skinSelect">
+      <option value="cyan">Ciano</option>
+      <option value="red">Vermelho</option>
+      <option value="yellow">Amarelo</option>
+      <option value="blue">Azul</option>
+      <option value="green">Verde</option>
+    </select><br><br>
+    <label>Avatar (URL da imagem):</label><br>
+    <input type="text" id="avatarUrl" placeholder="https://..." oninput="updateAvatar()" /><br>
+    <img id="avatarPreview" src="" alt="Preview"><br>
+    <button onclick="startGame()">Iniciar Jogo</button>
+  </div>
+  <div id="ranking"></div>
   <canvas id="game" width="800" height="600"></canvas>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
